🐛 Fix macos window decoration gap Fixes dothq/browser#569

--- a/common/browser/themes/osx/dotui/dot.osx.inc.css
+++ b/common/browser/themes/osx/dotui/dot.osx.inc.css
@@ -24,6 +24,6 @@
     padding-left: 90px;
 }
 
-#nav-bar[context="autohide-context"] {
-    padding-left: 0px;
+:root[tabsintitlebar] #nav-bar[context="autohide-context"] {
+    padding-left: 0px !important;
 } 
